# ChangeLog for net-print/pkpgcounter
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/pkpgcounter/ChangeLog,v 1.14 2011/04/05 21:42:03 arfrever Exp $

  05 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pkpgcounter-3.50.ebuild:
  Use Python 2 (bug #315871).

  05 Apr 2011; Ulrich Mueller <ulm@gentoo.org> pkpgcounter-3.20.ebuild,
  pkpgcounter-3.50.ebuild:
  Depend on dev-lang/python because virtual/python will go away, bug 358849.

*pkpgcounter-3.50 (06 Oct 2008)

  06 Oct 2008; Stefan Briesenick <sbriesen@gentoo.org>
  +pkpgcounter-3.50.ebuild:
  version bump.

  16 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  14 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Christian Andreetta (satya, #48841) from metadata.xml.

*pkpgcounter-3.20 (18 Nov 2007)

  18 Nov 2007; Stefan Schweizer <genstef@gentoo.org>
  -pkpgcounter-1.72.ebuild, -pkpgcounter-1.80.ebuild,
  -pkpgcounter-1.83.ebuild, -pkpgcounter-2.10.ebuild,
  +pkpgcounter-3.20.ebuild:
  version bump thanks to Daniel Heule <nerve@ipwar.ch> in bug 196892

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*pkpgcounter-2.10 (02 Oct 2006)

  02 Oct 2006; Patrick McLean <chutzpah@gentoo.org>
  +pkpgcounter-2.10.ebuild:
  Version bump.

  24 Aug 2006; Patrick McLean <chutzpah@gentoo.org> pkpgcounter-1.72.ebuild,
  pkpgcounter-1.80.ebuild, pkpgcounter-1.83.ebuild:
  Change the docs cleaning rm to use  rather than the name of the package.

*pkpgcounter-1.83 (23 Aug 2006)

  23 Aug 2006; Patrick McLean <chutzpah@gentoo.org> pkpgcounter-1.72.ebuild,
  pkpgcounter-1.80.ebuild, +pkpgcounter-1.83.ebuild:
  Version bump (bug #143517). Update HOMEPAGE and SRC_URI to new locations in
  all versions since the old values are no longer valid.

  23 Aug 2006; Patrick McLean <chutzpah@gentoo.org> metadata.xml,