@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/pkpgcounter/pkpgcounter-3.50.ebuild,v 1.3 2011/04/05 21:42:03 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/pkpgcounter/pkpgcounter-3.50-r1.ebuild,v 1.1 2012/05/13 17:52:02 pacho Exp $
 
 EAPI="3"
 PYTHON_DEPEND="2"
@@ -14,10 +14,9 @@ SRC_URI="http://www.pykota.com/software/${PN}/download/tarballs/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="psyco"  # psyco is available only for x86
+IUSE=""
 
-DEPEND="dev-python/imaging
-	x86? ( psyco? ( dev-python/psyco ) )"
+DEPEND="dev-python/imaging"
 RDEPEND="${DEPEND}"
 
 DOCS="BUGS CREDITS NEWS README PKG-INFO"
