@@ -1,6 +1,12 @@
 # ChangeLog for net-print/pkpgcounter
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/pkpgcounter/ChangeLog,v 1.14 2011/04/05 21:42:03 arfrever Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-print/pkpgcounter/ChangeLog,v 1.15 2012/05/13 17:52:02 pacho Exp $
+
+*pkpgcounter-3.50-r1 (13 May 2012)
+
+  13 May 2012; Pacho Ramos <pacho@gentoo.org> +pkpgcounter-3.50-r1.ebuild,
+  -pkpgcounter-3.50.ebuild, metadata.xml:
+  Drop psyco support, bug #410359.
 
   05 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   pkpgcounter-3.50.ebuild:
